# Gammou

./: .gitignore  .gitmodules  LICENSE  README.md
Gammou/: CMakeLists.txt  debug.h
Gammou/Application/audio_backend/: abstract_audio_backend.h
Gammou/Application/gui/: abstract_gui_component_factory.cpp  abstract_gui_component_factory.h  component_selector.cpp  component_selector.h  gui_component.cpp  gui_component.h  gui_component_main_factory.cpp  gui_component_main_factory.h  gui_master_circuit.cpp  gui_master_circuit.h  gui_polyphonic_circuit.cpp  gui_polyphonic_circuit.h  gui_properties.cpp  gui_properties.h  gui_sound_component.cpp  gui_sound_component.h  gui_synthesizer_circuit.cpp  gui_synthesizer_circuit.h  plugin_request_dialog.cpp  plugin_request_dialog.h  synthesizer_gui.cpp  synthesizer_gui.h  window.cpp  window.h
Gammou/Application/persistence/: synthesizer_persistence.cpp  synthesizer_persistence.h
Gammou/Application/standalone/: application.cpp  application.h  main.cpp  setting_widget.cpp  setting_widget.h
Gammou/Application/vst2/: vst2_plugin.cpp  vst2_plugin.h  vst_compat.hpp
Gammou/Application/vst3/: factory.cpp  plugin.cpp  plugin.h  vst3_plugin.cpp  vst3_plugin.h
Gammou/Plugins/: CMakeLists.txt  arctan.cpp  bit_crusher.cpp  dc_blocker.cpp  delay.cpp  granular.cpp  granular2.cpp  granular_base.cpp  granular_base.h  joystick.cpp  ladder_filter.cpp  lp2.cpp  noise.cpp  notch_filter.cpp  plugin1.cpp  plugin_helper.h  plugins_ids.h  ramp.cpp  rt_granular.cpp  sampler.cpp  tanh.cpp  template.cpp  wav.c  wav.h
Gammou/Process/: CMakeLists.txt  abstract_component.h  abstract_frame.h  abstract_frame_processor.h  abstract_process_frame.h  bytecode_frame_processor.h  circuit_frame.h  frame_component.h  gammou_process.h  observer.h  process.h
Gammou/Process/helper_components/: buffer_fetcher.h  buffer_filler.h  buffer_sum.h
Gammou/Synthesizer/: CMakeLists.txt  builtin_components.h  component_category.h  gammou_exception.h  sound_processing_helper.cpp  sound_processing_helper.h  synthesizer.cpp  synthesizer.h
Gammou/Synthesizer/builtin_components/: adsr_env.cpp  adsr_env.h  builtin_components_ids.h  filter_order2.cpp  filter_order2.h  function_component.h  invert.cpp  invert.h  lp2.cpp  lp2.h  negate.cpp  negate.h  product_component.cpp  product_component.h  saw.h  sin_component.cpp  sin_component.h  sound_processing_helper.cpp  sound_processing_helper.h  sum_component.cpp  sum_component.h
Gammou/Synthesizer/jit_frame_processor/: jit_frame_processor.cpp  jit_frame_processor.h
Gammou/Synthesizer/midi_driver/: midi_driver.cpp  midi_driver.h
Gammou/Synthesizer/plugin/: abstract_plugin_factory.cpp  abstract_plugin_factory.h  abstract_plugin_request_manager.h  data_stream.h  main_factory.cpp  main_factory.h  request_form.cpp  request_form.h
Gammou/Synthesizer/plugin_management/: abstract_plugin_factory.cpp  abstract_plugin_factory.h  data_stream.h  main_factory.cpp  main_factory.h  request_form.cpp  request_form.h
Gammou/Synthesizer/sound_component/: abstract_sound_component.cpp  abstract_sound_component.h  multi_channel_data_container.cpp  multi_channel_data_container.h  polyphonic_sound_component.cpp  polyphonic_sound_component.h  sound_component.cpp  sound_component.h  sound_component_manager.cpp  sound_component_manager.h  standard_sound_component.cpp  standard_sound_component.h
Gammou/Synthesizer/standard_component/: sin_component.cpp  sin_component.h
Gammou/Synthesizer/synthesizer_circuits/: master_circuit.cpp  master_circuit.h  polyphonic_circuit.cpp  polyphonic_circuit.h
Gammou/View/: CMakeLists.txt  abstract_window.cpp  abstract_window.h  cairo_definition.h  debug.h  view.h  vst3_window.h
Gammou/View/app_window/: abstract_app_window.h
Gammou/View/cmake_modules/: FindCairo.cmake  FindXext.cmake
Gammou/View/display/: abstract_application_display.cpp  abstract_application_display.h  abstract_display.cpp  abstract_display.h  abstract_vst2_display.cpp  abstract_vst2_display.h  abstract_vst3_display.cpp  abstract_vst3_display.h  abstract_win32_display.cpp  abstract_win32_display.h  abstract_x11_display.cpp  abstract_x11_display.h
Gammou/View/display_implementation/: win32_application_display.cpp  win32_application_display.h  win32_vst2_display.cpp  win32_vst2_display.h  win32_vst3_display.cpp  win32_vst3_display.h  x11_application_display.cpp  x11_application_display.h  x11_vst2_display.cpp  x11_vst2_display.h  x11_vst3_display.cpp  x11_vst3_display.h
Gammou/cmake/: util.cmake
src/: CMakeLists.txt  abstract_component.h  abstract_frame.h  circuit_frame.h  component.cpp  component.h  components.h  frame.h  frame_component.h  gammou_exception.h  link.h
src/application/: application.cpp  application.h  patch_browser.cpp  patch_browser.h  voice_mode_selector.cpp  voice_mode_selector.h
src/builtin_plugins/: additional_builtin_nodes.cpp  additional_builtin_nodes.h  load_builtin_plugins.cpp  load_builtin_plugins.h  node_widget_builtin_plugin.h
src/cmake/: AddGammouPackage.cmake
src/gui/: circuit_editor.cpp  circuit_editor.h  circuit_tree_model.cpp  circuit_tree_model.h  composite_node_plugin.cpp  composite_node_plugin.h  configuration_tree.cpp  configuration_tree.h  configuration_widget.cpp  configuration_widget.h  factory_widget.cpp  factory_widget.h  internal_node_widget.cpp  internal_node_widget.h  main_gui.cpp  main_gui.h  synthesizer_gui.cpp  synthesizer_gui.h
src/plugin_system/: external_plugin.cpp  external_plugin.h  ir_loader.cpp  ir_loader.h  node_widget_external_plugin.cpp  node_widget_external_plugin.h  node_widget_factory.cpp  node_widget_factory.h  package_loader.cpp  package_loader.h  static_chunk_node_widget.cpp  static_chunk_node_widget.h
src/process/: abstract_component.h  abstract_frame.h  circuit_frame.h  components.h  frame_component.h  link.h  observer.h  process.h
src/synthesizer/: midi_parser.cpp  midi_parser.h  parameter_manager.cpp  parameter_manager.h  synthesizer.cpp  synthesizer.h  voice_manager.cpp  voice_manager.h
src/utils/: serialization_helpers.h  wav_loader.cpp  wav_loader.h
(+134 files in other folders)
